--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <head>
 <tittle> TaliaInez </tittle> 
-<link> </link>
+<link href="home.style.css" type="text/css" rel="stylesheet">
 </head>
 <body> 
 <table>
